--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -1,21 +1,49 @@
-name: Android Build
+# Android Build on Windows Runner via Fastlane
+
+name: Android Build Pipeline - Windows
 
 on:
   push:
-    branches:
-      - ci-windows-android
+    branches: [ci-windows-android] 
+
 
 jobs:
-  build:
+  android_build_job:
     runs-on: [self-hosted, Windows, X64]
 
+    env:
+      KEYSTORE_PASSWORD: 'android'
+      KEY_PASSWORD: 'android'
+
     steps:
-        - uses: actions/checkout@v3.1.0
+     
+      - name: Checkout Repository
+        uses: actions/checkout@v3.1.0
 
-        - name: Setup Node.js
-          uses: actions/setup-node@v3
-          with:
-            node-version: '16.x'
+        with:
+          path: inji
+    
+      - name: Install Dependencies
+        run: |
+          choco install -y openjdk8
+          choco install -y nodejs-lts yarn
+          yarn install
+       
+        working-directory: inji
 
-        - name: Install dependencies
-          run: npm install
+      - name: Create .env.local file
+        run: |
+          echo "" > .env.local > android/local.properties
+
+      - name: Run Fastlane
+        run: |
+          fastlane android_build
+       
+        working-directory: inji
+
+      - name: Upload Artifact file
+        run: |
+          mkdir apk
+          cp inji/android/app/build/outputs/apk/release/app-release.apk apk/
+       
+        working-directory: inji
