--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -24,12 +24,15 @@ jobs:
           path: inji
 
       - name: Install Chocolatey
+        shell: pwsh
         run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force
+          Set-ExecutionPolicy AllSigned -Scope Process -Force
           [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
           iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+             
 
       - name: Install Dependencies
+        shell: pwsh
         run: |
           choco install openjdk --version=11.0
           choco install nodejs --version=16.17.0
