--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install npm dependencies
         run: |
-          npm i
+          npm ci
 
       - name: Create .env.local file
         run: |
