--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -29,7 +29,10 @@ jobs:
         run: |
           npm install
 
-
+       - name: Install Fastlane
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.6
       - name: Create .env.local file
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
