install java and sdk as a job

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -1,5 +1,10 @@
 name: Testing my workflow file 1.1
 
+env:
+  JAVA_HOME: ${{ env.JAVA_HOME }}
+  ANDROID_HOME: ${{ env.ANDROID_HOME }}
+  PATH: ${{ env.PATH }}:${{ env.JAVA_HOME }}/bin:${{ env.ANDROID_HOME }}/tools:${{ env.ANDROID_HOME }}/platform-tools
+
 on:
   push:
     branches:
@@ -15,6 +20,22 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
+      
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+       - name: Setup Android SDK
+        uses: android-actions/setup-android-sdk@v2
+        with:
+          sdk-version: 'latest'
+        
+      - name: Accept Android licenses
+        run: $ANDROID_HOME/tools/bin/sdkmanager --licenses
+        env:
+          ANDROID_HOME: ${{ env.ANDROID_HOME }}
+
 
       - name: Install npm dependencies
         run: |
@@ -29,15 +50,3 @@ jobs:
           # Strip git ref prefix from version
           echo "BRANCH_NAME=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
           echo "GPG_TTY=$(tty)" >> $GITHUB_ENV   
-
-      - name: Build App Newlogic Release
-        run: |
-          cd android
-          ./gradlew :app:assembleNewlogicRelease
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3.1.1
-        with:
-          name: output
-          path: android/app/build/outputs/apk/newlogic/release/
-          retention-days: 1
