--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -10,10 +10,6 @@ on:
 jobs:
   build-android:
     runs-on: [self-hosted, linux, ARM64]
-    env:
-      JAVA_HOME: ${{ env.JAVA_HOME }}
-      ANDROID_HOME: ${{ env.ANDROID_HOME }}
-      PATH: ${{ env.PATH }}:${{ env.JAVA_HOME }}/bin:${{ env.ANDROID_HOME }}/tools:${{ env.ANDROID_HOME }}/platform-tools
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-node@v3
@@ -24,16 +20,16 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+        run: echo "JAVA_11=$JAVA_HOME" >> $GITHUB_ENV
 
       - name: Setup Android SDK
         uses: android-actions/setup-android-sdk@v2
         with:
           sdk-version: 'latest'
+        run: echo "sdk-version"=$ANDROID_HOME" >> $GITHUB_ENV
         
       - name: Accept Android licenses
         run: $ANDROID_HOME/tools/bin/sdkmanager --licenses
-        env:
-          ANDROID_HOME: ${{ env.ANDROID_HOME }} 
 
       - name: Install npm dependencies
         run: |
