--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -23,9 +23,9 @@ jobs:
           node-version: '16.x'
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: '2.6.x' 
+          ruby-version: '3.1'
 
 
       - name: Install npm dependencies
