--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'openjdk'
         
       - name: Setup Java1  
         run: echo "JAVA_11=$JAVA_HOME" >> $GITHUB_ENV
