--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -22,16 +22,17 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
-        with:
-          ruby-version: '3.1'
-
-
       - name: Install npm dependencies
         run: |
           npm install
 
+      - name: Set up Ruby
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0.2'
+
+
+    
       - name: Install Fastlane
         run: |
            gem install bundler
