install android sdk explicitly and echo its path

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -41,7 +41,7 @@ jobs:
           source ~/.bashrc
 
       - name: Print sdkmanager path
-        run: which sdkmanager
+        run: echo $ANDROID_HOME
 
       - name: Install npm dependencies
         run: |
