--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -22,43 +22,47 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Cache local npm repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          path: ~/.npm
+      - name: Install Chocolatey
+        uses: chocolatey/install-action@v2
+        
+      - name: Install Ruby
+        run: choco install ruby -y
+      # - name: Cache local npm repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     path: ~/.npm
 
-      - name: Cache local gradle repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+      # - name: Cache local gradle repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #     path: |
+      #       ~/.gradle/caches
+      #       ~/.gradle/wrapper
 
-      - name: Install npm dependencies
-        run: |
-          npm install
+      # - name: Install npm dependencies
+      #   run: |
+      #     npm install
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0.2'
-
+      # - name: Set up Ruby
+      #   uses: ruby/setup-ruby@v1
+      #   with:
+      #     ruby-version: '3.0.2'
 
     
-      - name: Install Fastlane
-        run: |
-           gem install bundler
-           bundle install     
+      # - name: Install Fastlane
+      #   run: |
+      #      gem install bundler
+      #      bundle install     
 
-      - name: Create .env.local file
-        run: |
-          echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
+      # - name: Create .env.local file
+      #   run: |
+      #     echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
 
-      - name: Run Fastlane
-        run: |
-          fastlane android_build
+      # - name: Run Fastlane
+      #   run: |
+      #     fastlane android_build
       
       # - name: Upload Artifact file
       #   run: |
