--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -16,30 +16,38 @@ jobs:
       KEY_PASSWORD: 'android'
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3.1.0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
+      # - name: Checkout Repository
+      #   uses: actions/checkout@v3.1.0
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '16.x'
 
-      - name: Cache local npm repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          path: ~/.npm
+      # - name: Cache local npm repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     path: ~/.npm
 
-      - name: Cache local gradle repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+      # - name: Cache local gradle repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #     path: |
+      #       ~/.gradle/caches
+      #       ~/.gradle/wrapper
 
-     
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
+    
+       - name: Checkout code
+         uses: actions/checkout@v2
+
+       - name: Choco help
+         uses: crazy-max/ghaction-chocolatey@v2
+         with:
+          args: -h
+
+       - name: Set up Ruby
+         uses: ruby/setup-ruby@v1
+         with:
           ruby-version: '2.6.6'
 
  # - name: Install npm dependencies
@@ -47,18 +55,18 @@ jobs:
       #     npm install
 
     
-      - name: Install Fastlane
-        run: |
-           gem install bundler
-           bundle install     
+      # - name: Install Fastlane
+      #   run: |
+      #      gem install bundler
+      #      bundle install     
 
-      - name: Create .env.local file
-        run: |
-          echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
+      # - name: Create .env.local file
+      #   run: |
+      #     echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
 
-      - name: Run Fastlane
-        run: |
-          fastlane android_build
+      # - name: Run Fastlane
+      #   run: |
+      #     fastlane android_build
       
       # - name: Upload Artifact file
       #   run: |
