--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -45,10 +45,8 @@ jobs:
       #    with:
       #     args: -h
 
-       - name: Choco install InnoSetup
-         uses: ./
-         with:
-          args: install innosetup --no-progress
+       - name: Chocolatey Action
+         uses: crazy-max/ghaction-chocolatey@v2.1.0
 
       #  - name: Set up Ruby
       #    uses: ruby/setup-ruby-pkgs@v1
