--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -22,20 +22,23 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Cache local npm repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          path: ~/.npm
+      # - name: Cache local npm repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     path: ~/.npm
 
-      - name: Cache local gradle repository
-        uses: actions/cache@v3.0.11
+      # - name: Cache local gradle repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #     path: |
+      #       ~/.gradle/caches
+      #       ~/.gradle/wrapper
+      - name: Chocolatey Action
+        uses: crazy-max/ghaction-chocolatey@v2.1.0
         with:
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-
+          args: -h
 
       - name: Install npm dependencies
         run: |
