set android home

--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -20,7 +20,14 @@ jobs:
         uses: actions/checkout@v3.1.0
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+            node-version: '16.x'
+
+      - name: ANDROID_HOME
+        run: |
+         echo $ANDROID_HOME
+
+      - name: Set ANDROID_HOME
+        run:  echo "${{ secrets.ANDROID_HOME }}" > .env.local > android/local.properties
 
       - name: Cache local npm repository
         uses: actions/cache@v3.0.11
@@ -40,10 +47,10 @@ jobs:
       - name: Install npm dependencies
         run: |
             npm install
-
+      
       - name: Create .env.local file
         run: |
-          echo "sdk.dir= C:\\Users\\vagrant\\AppData\\Local\\Android\\sdk" > .env.local > android/local.properties
+          echo $ANDROID_HOME > .env.local > android/local.properties
 
       - name: Build APK
         run: |
