--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       KEYSTORE_PASSWORD: 'android'
       KEY_PASSWORD: 'android'
+      ANDROID_HOME: ${{ secrets.ANDROID_HOME }}
 
     steps:
       - name: Checkout Repository
@@ -26,8 +27,8 @@ jobs:
         run: |
          echo $ANDROID_HOME
 
-      - name: Set ANDROID_HOME
-        run:  echo "${{ secrets.ANDROID_HOME }}" > .env.local > android/local.properties
+      # - name: Set ANDROID_HOME
+      #   run:  echo "${{ secrets.ANDROID_HOME }}" > .env.local > android/local.properties
 
       - name: Cache local npm repository
         uses: actions/cache@v3.0.11
@@ -48,9 +49,9 @@ jobs:
         run: |
             npm install
       
-      - name: Create .env.local file
-        run: |
-          echo $ANDROID_HOME > .env.local > android/local.properties
+      # - name: Create .env.local file
+      #   run: |
+      #     echo $ANDROID_HOME > .env.local > android/local.properties
 
       - name: Build APK
         run: |
