--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -1,4 +1,4 @@
-name: Testing my workflow 1.2
+name: Integrating fastlane with pipeline
 
 on:
   push:
@@ -16,11 +16,37 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Set JAVA_HOME
-        run: echo "export ADITYAN_HOME=/usr/bin/" | sudo tee -a /etc/bash.bashrc
+      - name: Install npm dependencies
+        run: |
+          npm install
+      
+      - name: Create .env.local file
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
 
-      - name: Print Adityan home path
-        run: echo $ADITYAN_HOME
+      - name: Setup branch and env
+        run: |
+          # Strip git ref prefix from version
+          echo "BRANCH_NAME=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
+          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV   
 
-      - name: Print the details
-        run: lscpu
+      - name: Setup branch and GPG public key
+        run: |
+          # Strip git ref prefix from version
+        
+          echo ${{ env.BRANCH_NAME }}
+       
+          echo ${{ env.GPG_TTY }}
+          sudo apt-get --yes install gnupg2
+          gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
+          gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg 
+
+      - name: Run Fastlane
+        run: |
+          cd android
+          if [ ! -z "$FIREBASE_SECRET" ] && [ -f app/google-services.json.gpg ];then rm -f app/google-services.json;gpg2 --quiet --batch --passphrase=$FIREBASE_SECRET --pinentry-mode loopback --decrypt --output app/google-services.json app/mosip-google-services.json.gpg;fi
+          fastlane build_android
+        env:
+          MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
+          FIREBASE_SECRET: ${{ secrets.GPG_SECRET }}
+          APPLICATION_THEME: ${{ github.event.inputs.theme }}
