build without bash

--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -55,7 +55,9 @@ jobs:
 
       - name: Build APK
         run: |
-          npm run build:android:mosip
+          cd android
+          ./gradlew :app:assembleMosipRelease
+
 
       
       - name: Upload Artifact file
