build apk command modified

--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -52,10 +52,8 @@ jobs:
 
       - name: Build APK
         run: |
-          cd android
-          ./gradlew :app:assembleMosipRelease
-          cd ..
-
+            npm run build:android:mosip
+      
       
       - name: Upload Artifact file
         run: |
