--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -30,20 +30,6 @@ jobs:
       - name: Set ANDROID_HOME
         run:  echo "sdk.dir=C:\\Users\\vagrant\\AppData\\Local\\Android\\sdk"> android/local.properties
 
-      - name: Cache local npm repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          path: ~/.npm
-
-      - name: Cache local gradle repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-
 
       - name: Install npm dependencies
         run: |
@@ -52,7 +38,8 @@ jobs:
 
       - name: Build APK
         run: |
-            npm run build:android:mosip
+           cd android
+           ./gradlew :app:assembleMosipRelease
       
       
       - name: Upload Artifact file
