--- a/.github/workflows/android-windows-build.yml
+++ b/.github/workflows/android-windows-build.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       KEYSTORE_PASSWORD: 'android'
       KEY_PASSWORD: 'android'
-      ANDROID_HOME: ${{ secrets.ANDROID_HOME }}
+     
 
     steps:
       - name: Checkout Repository
@@ -23,12 +23,21 @@ jobs:
         with:
             node-version: '16.x'
 
+      - name: Set environment variable
+        uses: actions/set-env@v2
+        with:
+          ANDROID_HOME: C:\Android
+          GRADLE_HOME: C:\ProgramData\chocolatey\lib\gradle\tools\gradle-8.1
+          JAVA_HOME: C:\Program Files\Microsoft\jdk-11.0.18.10-hotspot\
+
       - name: ANDROID_HOME
         run: |
          echo $ANDROID_HOME
+         echo $GRADLE_HOME
+         echo $JAVA_HOME
 
-      - name: Set ANDROID_HOME
-        run:  echo "sdk.dir=C:\\Android"> android/local.properties
+      - name: Set PATH
+        run: echo "sdk.dir=C:\\Android"> android/local.properties
 
 
       - name: Install npm dependencies
