adding debug flipper xstate

--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "react-native-device-info": "^8.4.8",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-flipper": "^0.190.0",
+    "react-native-flipper-xstate": "^1.0.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keychain": "^8.0.0",
     "react-native-location-enabler": "^4.1.0",
-    "react-native-openid4vp-ble": "github:mosip/tuvali#v0.3.10",
+    "react-native-openid4vp-ble": "file:.yalc/react-native-openid4vp-ble",
     "react-native-permissions": "^3.6.0",
     "react-native-popable": "^0.4.3",
     "react-native-qrcode-svg": "^6.1.1",
