--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -39,12 +39,27 @@ jobs:
           echo ${{ env.GPG_TTY }}
           sudo apt-get --yes install gnupg2
           gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
-          gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg 
+          gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg
+
+      - name: Generate keystore
+        run: |
+        keytool \
+        -genkey -v \
+        -storetype PKCS12 \
+        -keyalg RSA \
+        -keysize 2048 \
+        -validity 10000 \
+        -storepass 'android' \
+        -keypass 'android' \
+        -alias androidreleasekey \
+        -keystore android/app/release.keystore \
+        -dname "CN=io.mosip.residentapp,OU=,O=,L=,S=,C=US"
 
       - name: Run Fastlane
         run: |
           cd android
           fastlane build_android
+      
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
           FIREBASE_SECRET: ${{ secrets.GPG_SECRET }}
