--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -16,30 +16,30 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Install npm dependencies
-        run: |
-          npm install
+      # - name: Install npm dependencies
+      #   run: |
+      #     npm install
       
-      - name: Create .env.local file
-        run: |
-          echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
+      # - name: Create .env.local file
+      #   run: |
+      #     echo "${{ secrets.ENV_FILE }}" > .env.local > android/local.properties
 
-      - name: Setup branch and env
-        run: |
-          # Strip git ref prefix from version
-          echo "BRANCH_NAME=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
-          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV   
+      # - name: Setup branch and env
+      #   run: |
+      #     # Strip git ref prefix from version
+      #     echo "BRANCH_NAME=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
+      #     echo "GPG_TTY=$(tty)" >> $GITHUB_ENV   
 
-      - name: Setup branch and GPG public key
-        run: |
-          # Strip git ref prefix from version
+      # - name: Setup branch and GPG public key
+      #   run: |
+      #     # Strip git ref prefix from version
         
-          echo ${{ env.BRANCH_NAME }}
+      #     echo ${{ env.BRANCH_NAME }}
        
-          echo ${{ env.GPG_TTY }}
-          sudo apt-get --yes install gnupg2
-          gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
-          gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg
+      #     echo ${{ env.GPG_TTY }}
+      #     sudo apt-get --yes install gnupg2
+      #     gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
+      #     gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg
 
       - name: Generate keystore
         run: |
@@ -60,11 +60,14 @@ jobs:
           export RELEASE_KEYSTORE=release.keystore
           export RELEASE_KEYSTORE_ALIAS=androidreleasekey
           export RELEASE_KEYSTORE_PASSWORD=android  
+          echo $RELEASE_KEYSTORE
+          echo $RELEASE_KEYSTORE_ALIAS
+          echo $RELEASE_KEYSTORE_PASSWORD
 
-      - name: Run Fastlane
-        run: |
-          cd android
-          fastlane build_android
+      # - name: Run Fastlane
+      #   run: |
+      #     cd android
+      #     fastlane build_android
       
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
