--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -41,6 +41,8 @@ jobs:
           gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
           gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg
 
+#1 - generate at runtime.
+#2 - Encrypt in workflow and decrypt and use it.
       - name: Generate keystore
         run: |
           keytool \
@@ -67,8 +69,8 @@ jobs:
       - name: Run Fastlane
         run: |
           cd android
-          y | sudo fastlane increment_vc
-          y | sudo fastlane increment_vname
+          yes | sudo fastlane increment_vc
+          yes | sudo fastlane increment_vname
           fastlane build_android
       
         env:
