--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -71,7 +71,7 @@ jobs:
           cd android
           yes | sudo fastlane increment_vc
           yes | sudo fastlane increment_vname
-          fastlane build_android
+          fastlane build_aab
       
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
