--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Setup keystore
         run: |
           sudo apt-get --yes install gnupg
-          gpg --import ./.github/keys/secret-key.gpg
-          gpg --quiet --batch --passphrase=adityan.kannan410  --allow-secret-key-import --import ./.github/keys/secret-key.gpg
+          gpg --import ../.github/keys/secret-key.gpg
+          gpg --quiet --batch --passphrase=adityan.kannan410  --allow-secret-key-import --import ../.github/keys/secret-key.gpg
           
       - name: Decrypt the keystore file
         run: |    
