give permission to secret key file

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Install npm dependencies
+      - name: Install npm 
         run: |
           npm install
       
